--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -42,53 +42,14 @@ content: |-
   Use `terraform output cluster_database_admin` command to output database secrets:
 
   ```bash
-  # cluster_database_admin
-  {
-  "auth" = {
-    "password" = "*****"
-    "user" = "root"
-  }
-  "nodes" = [
-    "https://opensearch-0-u525.vm.elestio.app:19200",
-    "https://opensearch-1-u525.vm.elestio.app:19200",
-  ]
-  }
+  {{ include "examples/doc/readme_output.sh" }}
   ```
+
+  Here is an example of how to use the cluster and all its nodes in the [Javascript client](https://opensearch.org/docs/latest/clients/javascript/index/) of Opensearch.
 
   ```js
-  ////////////// JS sample //////////////
-  const { Client } = require("@opensearch-project/opensearch/.");
-
-  const client = new Client({
-    auth: {
-      username: "root",
-      password: "*****",
-    },
-    nodes: [
-      "https://opensearch-0-u525.vm.elestio.app:19200",
-      "https://opensearch-1-u525.vm.elestio.app:19200",
-    ],
-    nodeSelector: "round-robin",
-  });
-
-  client
-    .search({
-      index: "my-index",
-      body: {
-        query: {
-          match: { title: "OpenSearch" },
-        },
-      },
-    })
-    .then((response) => {
-      console.log(response.hits.hits);
-    })
-    .catch((error) => {
-      console.log(error);
-    });
-  ////////////// ////////////// ////////////// //////////////
+  {{ include "examples/doc/readme_how_to_use.js" }}
   ```
-
 
   {{ .Footer }}
   {{ .Inputs }}
